added dark light mode toggling feature

--- a/index.html
+++ b/index.html
@@ -18,36 +18,37 @@
 </head>
 
 <body>
-
+<div id="toggle--dark-mode">
+  <button id="toggle" name="toggle" type="button">Toggle Light/Dark Mode</button>
+</div>
  <div id="container--main">
 
    <section id="wrapper--hero" class="section--page">
-     <img id="profile-pic" src="./img/"/>
+     <img id="profile-pic" src="./assets/images/profile-pic.png" alt="profile picture of college JF"/>
 
      <div>
        <h1 id="user-name">Jonathan Fisher</h1>
        <p id="bio">Software Developer and Data Analyst with an interest in...</p>
-       <p>(add emoji here) test@test.com</p>
+       <p>👉 jgf0200@gmail.com</p>
      </div>
    </section>
 
    <section class="section--page">
      <div id="socials--list">
-       <a href="#" target="_blank">YouTube sosb,e.g.</a>
-       <a href="#" target="_blank">Github</a>
-       <a href="#" target="_blank">LinkedIn</a>
-       <a href="./assets/resume.pdf" target="_blank">Download Resume</a>
+       <a href="https://github.com/jfish2" target="_blank">Github</a>
+       <a href="https://www.linkedin.com/in/jonathanfisher2/" target="_blank">LinkedIn</a>
+       <a href="./assets/jf_resume.pdf" target="_blank">Download Resume</a>
      </div>
    </section>
 
    <section class="section--page">
      <h2>Skills and Qualifications</h2>
      <ul id="qualifications--list">
-       <li>skill</li>
-       <li>skill</li>
-       <li>skill</li>
-       <li>skill</li>
-       <li>skill</li>
+       <li>✔️ skill</li>
+       <li>✔️ skill</li>
+       <li>✔️ skill</li>
+       <li>✔️ skill</li>
+       <li>✔️ skill</li>
      </ul>
    </section>
 
@@ -86,14 +87,14 @@
      <div class="line-break"></div>
 
      <div class="card--work-history">
-       <strong>🚧 INSTRUCTOR | YOUTUBE, UDEMY, TEACHABLE</strong>
-       <p>11/2019 - Present</p>
+       <strong>🚧 Code Coach | The Coder School</strong>
+       <p>01/2020 - Present</p>
        <p>Produced content showcasing new tech, tutorials & interviews with top developers.</p>
        <ul>
-         <li>166,000+ Youtube Subscribers</li>
+         <li>166,000+ YouTube Subscribers</li>
          <li>30,000 course copies sold</li>
-         <li>12+ Million views on Youtube</li>
-         <li>Made regular contributions to Traversy Medias youtube channel (1.9m Subscribers)</li>
+         <li>12+ Million views on YouTube</li>
+         <li>Made regular contributions to Traversy Medias' YouTube channel (1.9m Subscribers)</li>
          <li>Tutorial videos included projects such as social networks, Ecommerce, real time video, stripe & paypal integrations and more </li>
        </ul>
      </div>
@@ -120,11 +121,11 @@
        <strong>🚧 DIGITAL MARKETER | UNIFIVE DIGITAL</strong>
        <p>2014 - 2017</p>
        <p>Started a digital agency building websites and marketing for
-         local businesses. Mostly Wordpress sites with small modifications to
+         local businesses. Mostly WordPress sites with small modifications to
          themes.</p>
        <ul>
          <li>Organized SEO & SEM campaigns on a local and global scale.</li>
-         <li>Saved a customer $110k a year by reducing Adwords CPC cost with optimization</li>
+         <li>Saved a customer $110k a year by reducing Google Ads CPC cost with optimization</li>
          <li>70 + websites built with my small team of developers and freelancers</li>
        </ul>
      </div>
@@ -156,12 +157,6 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
