fixed toggle display

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 </head>
 
 <body>
-<div id="toggle--dark-mode">
-  <button id="toggle" name="toggle" type="button">Toggle Light/Dark Mode</button>
-</div>
  <div id="container--main">
-
+   <div id="toggle-modes">
+     <button id="toggle" name="toggle" type="button">Toggle Light/Dark Mode</button>
+   </div>
    <section id="wrapper--hero" class="section--page">
      <img id="profile-pic" src="./assets/images/profile-pic.png" alt="profile picture of college JF"/>
 
