updated index page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
      <div>
        <h1 id="user-name">Jonathan Fisher</h1>
-       <p id="bio">Software Developer and Data Analyst with an interest in...</p>
+       <p id="bio">Support/Software Engineer and Data Analyst with an interest in edtech, sustainability, and healthy living</p>
        <p>👉 jgf0200@gmail.com</p>
      </div>
    </section>
@@ -43,11 +43,11 @@
    <section class="section--page">
      <h2>Skills and Qualifications</h2>
      <ul id="qualifications--list">
-       <li>✔️ skill</li>
-       <li>✔️ skill</li>
-       <li>✔️ skill</li>
-       <li>✔️ skill</li>
-       <li>✔️ skill</li>
+       <li>✔️ Proficient working with Golang, Python, Java, SQL, and Javascript</li>
+       <li>✔️ Experienced in integrating and working with external API's</li>
+       <li>✔️ Google IT Support Professional Certified</li>
+       <li>✔️ 3 years experience teaching students the fundamentals of computer science and how to code</li>
+       <li>✔️ Salesforce Pathfinder alum (2020)</li>
      </ul>
    </section>
 
@@ -74,7 +74,7 @@
      <h2>Work History</h2>
      <div class="line-break"></div>
      <div class="card--work-history">
-       <strong>🚧 Customer Support Engineer | True Anthem</strong>
+       <strong>🚧 Customer Support Engineer | TRUE ANTHEM</strong>
        <p>06/2021 - Present</p>
        <p>Worked on making Agora’s Web Based SDK more accessible through video tutorials, articles, demo projects and event based training. Also building out React UI components & leading a team to re-design Agora’s documentation and api reference.</p>
        <ul>
@@ -86,23 +86,22 @@
      <div class="line-break"></div>
 
      <div class="card--work-history">
-       <strong>🚧 Code Coach | The Coder School</strong>
+       <strong>🚧 Code Coach | THE CODER SCHOOL</strong>
        <p>01/2020 - Present</p>
-       <p>Produced content showcasing new tech, tutorials & interviews with top developers.</p>
+       <p>Mentor students from ages 7-45+ the fundamentals of programming and work with them to build games and apps</p>
        <ul>
-         <li>166,000+ YouTube Subscribers</li>
-         <li>30,000 course copies sold</li>
-         <li>12+ Million views on YouTube</li>
-         <li>Made regular contributions to Traversy Medias' YouTube channel (1.9m Subscribers)</li>
-         <li>Tutorial videos included projects such as social networks, Ecommerce, real time video, stripe & paypal integrations and more </li>
+         <li>Students pass their AP CS exams with 100% pass rate </li>
+         <li>Implement structured lesson plans from scratch</li>
+         <li>Programming languages and technologies taught include: Python, Java, C++, Git, HTML, CSS, SQL, Scratch, JavaScript</li>
+         <li>Several of my students have gone on to teach new students at the lower levels</li>
        </ul>
      </div>
 
      <div class="line-break"></div>
 
      <div class="card--work-history">
-       <strong>🚧 SENIOR DEVELOPER | FOI LABS</strong>
-       <p>10/2017 - 10/2019</p>
+       <strong>🚧 Project Specialist, Product Operations | LYFT</strong>
+       <p>06/2018 - 02/2021</p>
        <p>Designed and developed a laboratory management system. My system
          provided an interface for lab technicians and customers to view and
          track data from samples tested in the lab.</p>
