--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
      <div>
        <h1 id="user-name">Jonathan Fisher</h1>
-       <p id="bio">Support/Software Engineer and Data Analyst with an interest in edtech, sustainability, and healthy living</p>
+       <p id="bio">Support/Software Engineer and Data Analyst with an interest in ed-tech, sustainability, foreign policy/international relations, and healthy living</p>
        <p>👉 jgf0200@gmail.com</p>
      </div>
    </section>
@@ -46,7 +46,7 @@
        <li>✔️ Proficient working with Golang, Python, Java, SQL, and Javascript</li>
        <li>✔️ Experienced in integrating and working with external API's</li>
        <li>✔️ Google IT Support Professional Certified</li>
-       <li>✔️ 3 years experience teaching students the fundamentals of computer science and how to code</li>
+       <li>✔️ 3+ years experience teaching students the fundamentals of computer science and how to code</li>
        <li>✔️ Salesforce Pathfinder alum (2020)</li>
      </ul>
    </section>
@@ -59,13 +59,16 @@
          <span>Python, Golang, Java, Javascript, Salesforce Apex</span>
        </div>
        <div class="card--techstack">
-         <span>Django, Flask, Fiber, Pandas, Numpy, Matplotlib</span>
+         <span>Django, Flask, Fiber, Pandas, Numpy, Matplotlib, JUnit, pytest</span>
        </div>
        <div class="card--techstack">
-         <span>Postgres, MongoDB, MySQL, Presto, Hive, Redshift</span>
+         <span>Postgres, MongoDB, MySQL, Presto, Hive, Redshift, SOQL</span>
        </div>
        <div class="card--techstack">
-         <span>Tableau, Salesforce, Microsoft Excel/Google Sheets</span>
+         <span>Tableau, Salesforce, Microsoft Excel/Google Sheets, Superset</span>
+       </div>
+       <div class="card--techstack">
+         <span>HTML, CSS, jQuery</span>
        </div>
      </div>
    </section>
@@ -74,7 +77,7 @@
      <h2>Work History</h2>
      <div class="line-break"></div>
      <div class="card--work-history">
-       <strong>🚧 Customer Support Engineer | TRUE ANTHEM</strong>
+       <strong>🚧 Support Engineer | TRUE ANTHEM</strong>
        <p>06/2021 - Present</p>
        <p>Worked on making Agora’s Web Based SDK more accessible through video tutorials, articles, demo projects and event based training. Also building out React UI components & leading a team to re-design Agora’s documentation and api reference.</p>
        <ul>
