update work history

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Jonathan Fisher's Resume Site</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,7 +30,7 @@
 
      <div>
        <h1 id="user-name">Jonathan Fisher</h1>
-       <p id="bio">Support/Software Engineer and Data Analyst with an interest in ed-tech, sustainability, foreign policy/international relations, and healthy living</p>
+       <p id="bio">Support/Software Engineer and Data Analyst with an interest in ed-tech, sustainability, foreign policy/international relations, and healthy living.</p>
        <p>👉 jgf0200@gmail.com</p>
      </div>
    </section>
@@ -68,10 +68,16 @@
          <span>Postgres, MongoDB, MySQL, Presto, Hive, Redshift, SOQL</span>
        </div>
        <div class="card--techstack">
-         <span>Tableau, Salesforce, Microsoft Excel/Google Sheets, Superset</span>
+         <span>Tableau, Salesforce, Microsoft Excel/Google Sheets, Superset, Pendo</span>
        </div>
        <div class="card--techstack">
          <span>HTML, CSS, jQuery</span>
+       </div>
+       <div class="card--techstack">
+         <span>Docker, Kubernetes</span>
+       </div>
+       <div class="card--techstack">
+         <span>IntelliJ, PyCharm, Eclipse, Atom, vim</span>
        </div>
      </div>
    </section>
@@ -82,11 +88,23 @@
      <div class="card--work-history">
        <strong>🚧 Support Engineer | TRUE ANTHEM</strong>
        <p>06/2021 - Present</p>
-       <p>Worked on making Agora’s Web Based SDK more accessible through video tutorials, articles, demo projects and event based training. Also building out React UI components & leading a team to re-design Agora’s documentation and api reference.</p>
+       <p>Develop internal tooling and an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
+         year. Promoted to Team Lead in the beginning of 2023.</p>
        <ul>
-         <li>Doubled Web SDK’s monthly usage minutes from 15 million to 30 million minutes within my first 4 months</li>
-         <li>Produced educational video content which resulted in 300k+ views on youtube</li>
-         <li>Produced SEO campaigns and content to gain market share for related keywords.</li>
+         <li>Investigate complex issues, bugs, and system outages by monitoring logs, metrics, and traces</li>
+         <li>Implement and configure new dashboards and alerts to prevent future issues from occurring</li>
+         <li>Customize Javascript analytics scripts to capture user engagement events and metrics while maintaining optimal site performance</li>
+         <li>Resolve 500+ tickets annually for a multitude of large customers with consistency and clear communication, resulting in top NPM scores for the entire CSE team</li>
+         <li>Identify and resolve bugs in user-facing app interface and internal control panel</li>
+         <li>Responsible for leading the full regression and functional testing of features for the team prior to each weekly release</li>
+         <li>Created a company-wide utilized internal search tool using Golang, Javascript, jquery, FomanticUI, and Apache Solr that by itself uncovered numerous stale configuration errors</li>
+         <li>Implemented API to integrate TrueAnthem's system with ChurnZero, used daily by our customer success and sales team, as well as CEO</li>
+         <li>Successfully built an integration to manage users, accounts, and notifications in an external CRM (KeapCRM)</li>
+         <li>Established a documentation-first culture on the team, building out complete documentation for the onboarding of new team members in my first year</li>
+         <li>Created a Slackbot to integrate with Youtrack to ping team channels with updates when new issues are created in the Production Engineering board </li>
+         <li>After migrating from YouTrack to Github, I created a custom Slackbot to integrate with GitHub to ping team channels with updates when new issues are created in the Production Engineering project</li>
+         <li>Implementing various cleaner jobs in Golang to remove stale data from the system</li>
+         <
        </ul>
      </div>
      <div class="line-break"></div>
@@ -96,7 +114,7 @@
        <p>01/2020 - Present</p>
        <p>Mentor students from ages 7-45+ the fundamentals of programming and work with them to build games and apps</p>
        <ul>
-         <li>Students pass their AP CS exams with 100% pass rate </li>
+         <li>Ensure that my students have a 100% pass rate on their AP CS exams </li>
          <li>Implement structured lesson plans from scratch</li>
          <li>Programming languages and technologies taught include: Python, Java, C++, Git, HTML, CSS, SQL, Scratch, JavaScript</li>
          <li>Several of my students have gone on to teach new students at the lower levels</li>
@@ -106,31 +124,35 @@
      <div class="line-break"></div>
 
      <div class="card--work-history">
-       <strong>🚧 Project Specialist, Product Operations | LYFT</strong>
+       <strong>🚧 Project Specialist - Product Operations | LYFT</strong>
        <p>06/2018 - 02/2021</p>
-       <p>Designed and developed a laboratory management system. My system
-         provided an interface for lab technicians and customers to view and
-         track data from samples tested in the lab.</p>
+       <p>Designed and developed an end-to-end QA process to ensure 100% accuracy on rideshare fees and sales tax
+       change configurations, from automatating a customizable request pipeline, building out automated SQL reports in Mode
+       to ensure configuration inaccuracies were caught in less than 24 hours</p>
        <ul>
-         <li>Designed prototype & pitched original idea for new lab management system (LIMS)</li>
-         <li>Built entire code base and brought version 1 of LIMS system to market as a solo developer</li>
-         <li>Onboarded and trained customers (Webinars & Conferences)</li>
-         <li>Managed a small team of developers in expansion of LIMS system</li>
+         <li>Generated compliance and finance reports for cross-funcHonal stakeholders utilizing SQLin Mode and Superset</li>
+         <li>Configured ride-share fees and provided Finance teams with SQL reports to verify accuracy of fee collection</li>
+         <li>Implemented in-app help access points (HAP’s) utilizing JSON and Java; created SQL reports to track time/cost savings</li>
+         <li>Reduced number of deactivated drivers on platform by 30%+ in specific regions by designing driver and vehicle
+           document attributes using JSON and Python</li>
+         <li>Created and maintained custom-made JIRA request forms in AWS using JSON, Angular, Bootstrap, HTML, and CSS for
+           Finance and Compliance stakeholders</li>
        </ul>
      </div>
 
      <div class="line-break"></div>
 
      <div class="card--work-history">
-       <strong>🚧 DIGITAL MARKETER | UNIFIVE DIGITAL</strong>
-       <p>2014 - 2017</p>
-       <p>Started a digital agency building websites and marketing for
-         local businesses. Mostly WordPress sites with small modifications to
-         themes.</p>
+       <strong>🚧 Associate Investigative Risk and Fraud Analyst | ROSS STORES</strong>
+       <p>10/2016 - 02/2018</p>
+       <p>Led risk analyst team and uncovered 145+ cases of internal/external fraud by creating reports via SQL,
+         resulting in $120k+ in revenue recouped for the company</p>
        <ul>
-         <li>Organized SEO & SEM campaigns on a local and global scale.</li>
-         <li>Saved a customer $110k a year by reducing Google Ads CPC cost with optimization</li>
-         <li>70 + websites built with my small team of developers and freelancers</li>
+         <li>Discovered and froze $100k+ in fraudulently bought gift cards using Aspect Elite LP, SQL, Python, and Excel</li>
+         <li>Primary lead for developing and training 12+ analysts on detecting internal fraud using internal systems and external tools</li>
+         <li>Resolved 15+ daily incidents across 1.7k+ stores and liaised with third party vendors to resolve card chargeback issues</li>
+         <li>Prepared and presented weekly reports on risk, internal fraud, severe weather, and international travel for executives</li>
+         <li>Nominated for Analyst of the Month 6 times by peers and managers</li>
        </ul>
      </div>
    </section>
@@ -139,15 +161,15 @@
      <h2>Projects & Accomplishments</h2>
 
      <div class="card--project">
-       <a href="project1.html"><span>🏆 </span>Built a Laboratory management system for forensics lab</a>
+       <a href="project1.html"><span>🏆 </span>Implemented a working Git clone in Java</a>
      </div>
 
      <div class="card--project">
-       <a href="project1.html" ><span>🏆 </span>Documentation website - Lead team to re-build docs for agora.io</a>
+       <a href="project2.html" ><span>🏆 </span>Documentation website - Lead team to re-build docs for agora.io</a>
      </div>
 
      <div class="card--project">
-       <a href="project1.html" ><span>🏆 </span>Ecommerce platform using paypal and stripe API for payment integration</a>
+       <a href="project3.html" ><span>🏆 </span>Ecommerce platform using paypal and stripe API for payment integration</a>
      </div>
 
      <div class="card--project">
