update work history

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
      <div class="card--work-history">
        <strong>🚧 Support Engineer | TRUE ANTHEM</strong>
        <p>06/2021 - Present</p>
-       <p>Develop internal tooling and an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
+       <p>Developed internal tooling and an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
          year. Promoted to Team Lead in the beginning of 2023.</p>
        <ul>
          <li>Investigate complex issues, bugs, and system outages by monitoring logs, metrics, and traces</li>
          <li>Implement and configure new dashboards and alerts to prevent future issues from occurring</li>
          <li>Customize Javascript analytics scripts to capture user engagement events and metrics while maintaining optimal site performance</li>
-         <li>Resolve 500+ tickets annually for a multitude of large customers with consistency and clear communication, resulting in top NPM scores for the entire CSE team</li>
+         <li>Resolve and triaged 500+ tickets annually for a multitude of large customers with consistency and clear communication, resulting in top NPM scores for the entire CSE team</li>
          <li>Identify and resolve bugs in user-facing app interface and internal control panel</li>
          <li>Responsible for leading the full regression and functional testing of features for the team prior to each weekly release</li>
          <li>Created a company-wide utilized internal search tool using Golang, Javascript, jquery, FomanticUI, and Apache Solr that by itself uncovered numerous stale configuration errors</li>
@@ -102,9 +102,10 @@
          <li>Successfully built an integration to manage users, accounts, and notifications in an external CRM (KeapCRM)</li>
          <li>Established a documentation-first culture on the team, building out complete documentation for the onboarding of new team members in my first year</li>
          <li>Created a Slackbot to integrate with Youtrack to ping team channels with updates when new issues are created in the Production Engineering board </li>
-         <li>After migrating from YouTrack to Github, I created a custom Slackbot to integrate with GitHub to ping team channels with updates when new issues are created in the Production Engineering project</li>
-         <li>Implementing various cleaner jobs in Golang to remove stale data from the system</li>
-         <
+         <li>After migrating from YouTrack to Github, I implemented a custom Slackbot that integrated with GitHub to ping team channels with updates when new issues are created in the Production Engineering project</li>
+         <li>Implemented various cleaner jobs in Golang to remove stale data from the system</li>
+         <li>Led Customer Support Engineering (CSE) daily stand-up calls on assigned Zendesk and Github tickets </li>
+         <li>Implemented a Round-Robin tool that automatically assigned support requests to freed up team members</li>
        </ul>
      </div>
      <div class="line-break"></div>
