--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
      <h2>Projects & Accomplishments</h2>
 
      <div class="card--project">
-       <a href="project1.html"><span>🏆 </span>Implemented a working Git clone in Java</a>
+       <a href="project1.html"><span>🏆 </span>GITLET - Implemented a full working local Git clone in Java</a>
      </div>
 
      <div class="card--project">
-       <a href="project2.html" ><span>🏆 </span>Documentation website - Lead team to re-build docs for agora.io</a>
+       <a href="project2.html" ><span>🏆 </span>2048 - Implemented the backend logic in Java for the UI game 2048 </a>
      </div>
 
      <div class="card--project">
-       <a href="project3.html" ><span>🏆 </span>Ecommerce platform using paypal and stripe API for payment integration</a>
+       <a href="project3.html" ><span>🏆 </span>Open Source Contributor for <a href="https://gohugo.io/">Hugo</a> - Added contributions to the popular site framework built in Go</a>
      </div>
 
      <div class="card--project">
-       <a href="project1.html"><span>🏆 </span>Social Network - open source project</a>
+       <a href="project1.html"><span>🏆 </span>Implemented an Apache Solr MetaRule Search Tool for True Anthem with Golang, Javascript, jQuery, and HTML</a>
      </div>
 
    </section>
