update projects and gitlet

--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
      <h2>Projects & Accomplishments</h2>
 
      <div class="card--project">
-       <a href="project1.html"><span>🏆 </span>GITLET - Implemented a full working local Git clone in Java</a>
+       <a href="gitlet.html"><span>🏆 </span>Gitlet - Implemented a full working local Git clone in Java</a>
      </div>
 
      <div class="card--project">
-       <a href="project2.html" ><span>🏆 </span>2048 - Implemented the backend logic in Java for the UI game 2048 </a>
+       <a href="project2.html" ><span>🏆 </span>2048 - Implemented the backend logic for the UI game 2048 in Java </a>
      </div>
 
      <div class="card--project">
-       <a href="project3.html" ><span>🏆 </span>Open Source Contributor for <a href="https://gohugo.io/">Hugo</a> - Added contributions to the popular site framework built in Go</a>
+       <a href="project3.html" ><span>🏆 </span>Open Source Contributor for <a href="https://gohugo.io/">Hugo</a></a>
      </div>
 
      <div class="card--project">
-       <a href="project1.html"><span>🏆 </span>Implemented an Apache Solr MetaRule Search Tool for True Anthem with Golang, Javascript, jQuery, and HTML</a>
+       <a href="gitlet.html"><span>🏆 </span>Implemented an Apache Solr "MetaRule Search Tool" for True Anthem using Golang, Javascript, jQuery, and HTML</a>
      </div>
 
    </section>
