update project hrefs

--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
      </div>
 
      <div class="card--project">
-       <a href="project2.html" ><span>🏆 </span>2048 - Implemented the backend logic for the UI game 2048 in Java </a>
+       <a href="2048.html" ><span>🏆 </span>2048 - Implemented the backend logic for the UI game 2048 in Java </a>
      </div>
 
      <div class="card--project">
-       <a href="project3.html" ><span>🏆 </span>Open Source Contributor for <a href="https://gohugo.io/">Hugo</a></a>
+       <a href="hugo-os.html" ><span>🏆 </span><a href="https://gohugo.io/">Hugo</a> - Open Source Contributor</a>
      </div>
 
      <div class="card--project">
-       <a href="gitlet.html"><span>🏆 </span>Implemented an Apache Solr "MetaRule Search Tool" for True Anthem using Golang, Javascript, jQuery, and HTML</a>
+       <a href="metarule-search-tool.html"><span>🏆 </span>"MetaRule" Search Tool - Implemented for True Anthem using Golang, Javascript, jQuery, and HTML</a>
      </div>
 
    </section>
