update project semantics

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
      <h2>Projects & Accomplishments</h2>
 
      <div class="card--project">
-       <a href="gitlet.html"><span>🏆 </span>Gitlet - Implemented a full working local Git clone in Java</a>
+       <a href="gitlet.html"><span>🏆 </span>Gitlet - Implemented a fully functional local Git clone in Java</a>
      </div>
 
      <div class="card--project">
