--- a/gitlet.html
+++ b/gitlet.html
@@ -17,12 +17,12 @@
     <li><a href="#" target="_blank">Demo (Under Construction)</a></li>
   </ul>
 
-  <p>A full working local Git clone in Java</p>
+  <p>A fully functional local Git clone implemented in Java</p>
 
   <p>Course project for CS 61B (Data Structures) at UC Berkeley</p>
 
   <ul>
-    <li>Several git commands implemented including: init, add, log, rm, commit, global-log, find, status, checkout, branch, rm-branch, merge, reset</li>
+    <li>Several local git commands implemented including: init, add, log, rm, commit, global-log, find, status, checkout, branch, rm-branch, merge, reset</li>
   </ul>
 </div>
 
