--- a/gitlet.html
+++ b/gitlet.html
@@ -13,7 +13,7 @@
   <h1>Gitlet</h1>
 
   <ul>
-    <li><a href="#">Source Code stored privately due to course agreement, please feel free to request access</a></li>
+    <li><a href="#">Source Code stored privately due to course policy, please feel free to request access</a></li>
     <li><a href="#" target="_blank">Demo (Under Construction)</a></li>
   </ul>
 
