--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
      <div>
        <h1 id="user-name">Jonathan Fisher</h1>
-       <p id="bio">Support/Software Engineer and Data Analyst with an interest in ed-tech, sustainability, foreign policy/international relations, and healthy living.</p>
+       <p id="bio">Support/Software Engineer and Data Analyst with an interest in healthy living, AI, sustainability, foreign policy/international relations, security and risk management, and happiness.</p>
        <p>👉 jgf0200@gmail.com</p>
+       <p>Or... 👉 jfish201@berkeley.edu </p>
      </div>
    </section>
 
@@ -89,22 +90,22 @@
        <strong>🚧 Support Engineer | TRUE ANTHEM</strong>
        <p>06/2021 - Present</p>
        <p>Developed internal tooling and an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
-         year. Promoted to Team Lead in the beginning of 2023.</p>
+         year. Promoted to CSE Manager in September 2023.</p>
        <ul>
          <li>Investigate complex issues, bugs, and system outages by monitoring logs, metrics, and traces</li>
          <li>Implement and configure new dashboards and alerts to prevent future issues from occurring</li>
-         <li>Customize Javascript analytics scripts to capture user engagement events and metrics while maintaining optimal site performance</li>
-         <li>Resolve and triaged 500+ tickets annually for a multitude of large customers with consistency and clear communication, resulting in top NPM scores for the entire CSE team</li>
+         <li>Customize Javascript analytics scripts (and associated custom code editor!) to capture user engagement events and metrics while maintaining optimal site performance</li>
+         <li>Resolve and triage 500+ tickets annually for a multitude of large customers with consistency and clear communication, resulting in top NPM scores for the entire CSE team</li>
          <li>Identify and resolve bugs in user-facing app interface and internal control panel</li>
          <li>Responsible for leading the full regression and functional testing of features for the team prior to each weekly release</li>
-         <li>Created a company-wide utilized internal search tool using Golang, Javascript, jquery, FomanticUI, and Apache Solr that by itself uncovered numerous stale configuration errors</li>
-         <li>Implemented API to integrate TrueAnthem's system with ChurnZero, used daily by our customer success and sales team, as well as CEO</li>
+         <li>Created a company-wide utilized internal search tool using Golang, Javascript, jquery, FomanticUI, and Apache Solr that helped uncover numerous stale configuration errors</li>
+         <li>Implemented separate API's to integrate TrueAnthem's system with ChurnZero, an external tool used daily by our customer success and sales team, as well as CEO</li>
          <li>Successfully built an integration to manage users, accounts, and notifications in an external CRM (KeapCRM)</li>
          <li>Established a documentation-first culture on the team, building out complete documentation for the onboarding of new team members in my first year</li>
          <li>Created a Slackbot to integrate with Youtrack to ping team channels with updates when new issues are created in the Production Engineering board </li>
-         <li>After migrating from YouTrack to Github, I implemented a custom Slackbot that integrated with GitHub to ping team channels with updates when new issues are created in the Production Engineering project</li>
+         <li>After migrating from YouTrack to Github, implemented a custom Slackbot integrated with GitHub to ping team channels with updates when new issues are created in the Production Engineering project</li>
          <li>Implemented various cleaner jobs in Golang to remove stale data from the system</li>
-         <li>Led Customer Support Engineering (CSE) daily stand-up calls on assigned Zendesk and Github tickets </li>
+         <li>Lead Customer Support Engineering (CSE) daily stand-up calls </li>
          <li>Implemented a Round-Robin tool that automatically assigned support requests to freed up team members</li>
        </ul>
      </div>
@@ -113,12 +114,12 @@
      <div class="card--work-history">
        <strong>🚧 Code Coach | THE CODER SCHOOL</strong>
        <p>01/2020 - Present</p>
-       <p>Mentor students from ages 7-45+ the fundamentals of programming and work with them to build games and apps</p>
+       <p>Mentor students ages 7-45+ the fundamentals of programming and work with them to build games and apps</p>
        <ul>
-         <li>Ensure that my students have a 100% pass rate on their AP CS exams </li>
+         <li>Ensure that my students have a 100% pass rate on their AP CS exams</li>
          <li>Implement structured lesson plans from scratch</li>
          <li>Programming languages and technologies taught include: Python, Java, C++, Git, HTML, CSS, SQL, Scratch, JavaScript</li>
-         <li>Several of my students have gone on to teach new students at the lower levels</li>
+         <li>Several of my students have gone on to teach Scratch to new students at the lower levels</li>
        </ul>
      </div>
 
@@ -127,17 +128,17 @@
      <div class="card--work-history">
        <strong>🚧 Project Specialist - Product Operations | LYFT</strong>
        <p>06/2018 - 02/2021</p>
-       <p>Designed and developed an end-to-end QA process to ensure 100% accuracy on rideshare fees and sales tax
-       change configurations, from automatating a customizable request pipeline, building out automated SQL reports in Mode
+       <p>Designed and developed an end-to-end QA process to ensure 100% accuracy on ride-share fees and sales tax
+       change configurations, from automating a customizable request pipeline, building out automated SQL reports in Mode
        to ensure configuration inaccuracies were caught in less than 24 hours</p>
        <ul>
-         <li>Generated compliance and finance reports for cross-funcHonal stakeholders utilizing SQLin Mode and Superset</li>
-         <li>Configured ride-share fees and provided Finance teams with SQL reports to verify accuracy of fee collection</li>
-         <li>Implemented in-app help access points (HAP’s) utilizing JSON and Java; created SQL reports to track time/cost savings</li>
+         <li>Generated compliance and finance reports for cross-functional stakeholders utilizing SQL in Mode and Superset</li>
+         <li>Configured ride-share fees and provided Finance teams with SQL reports to verify accuracy of fee collection, resulting in 100% fee and tax collection accuracy</li>
+         <li>Implemented in-app help access points (HAP’s) utilizing JSON and Java; created SQL reports to track time and cost savings</li>
          <li>Reduced number of deactivated drivers on platform by 30%+ in specific regions by designing driver and vehicle
            document attributes using JSON and Python</li>
          <li>Created and maintained custom-made JIRA request forms in AWS using JSON, Angular, Bootstrap, HTML, and CSS for
-           Finance and Compliance stakeholders</li>
+           Finance and Compliance team stakeholders</li>
        </ul>
      </div>
 
@@ -153,7 +154,7 @@
          <li>Primary lead for developing and training 12+ analysts on detecting internal fraud using internal systems and external tools</li>
          <li>Resolved 15+ daily incidents across 1.7k+ stores and liaised with third party vendors to resolve card chargeback issues</li>
          <li>Prepared and presented weekly reports on risk, internal fraud, severe weather, and international travel for executives</li>
-         <li>Nominated for Analyst of the Month 6 times by peers and managers</li>
+         <li>Nominated for Analyst of the Month 6+ times by peers and managers</li>
        </ul>
      </div>
    </section>
@@ -175,6 +176,10 @@
 
      <div class="card--project">
        <a href="metarule-search-tool.html"><span>🏆 </span>"MetaRule" Search Tool - Implemented for True Anthem using Golang, Javascript, jQuery, and HTML</a>
+     </div>
+
+     <div class="card--project">
+       <a href="page-views-tool.html"><span>🏆 </span>Page Views Tool - Implemented for True Anthem using Golang, Javascript, jQuery, and HTML</a>
      </div>
 
    </section>
