update new title

--- a/index.html
+++ b/index.html
@@ -87,9 +87,22 @@
      <h2>Work History</h2>
      <div class="line-break"></div>
      <div class="card--work-history">
+       <strong>🚧 Support Engineer, Manager | TRUE ANTHEM</strong>
+       <p>06/2021 - Present</p>
+       <p>Develop internal tooling and build and maintain an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
+         year.</p>
+       <ul>
+         <li>Promoted to Support Engineering Manager in September 2023</li>
+         <li>Lead daily CSE team calls</li>
+       </ul>
+     </div>
+     <div class="line-break"></div>
+
+     <div class="line-break"></div>
+     <div class="card--work-history">
        <strong>🚧 Support Engineer | TRUE ANTHEM</strong>
        <p>06/2021 - Present</p>
-       <p>Developed internal tooling and an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
+       <p>Develop internal tooling and maintain and build an internal admin UI to automate repetitive maintenance and configuration tasks, saving account managers and the support engineering team 1000+ hours per
          year. Promoted to CSE Manager in September 2023.</p>
        <ul>
          <li>Investigate complex issues, bugs, and system outages by monitoring logs, metrics, and traces</li>
@@ -105,7 +118,7 @@
          <li>Created a Slackbot to integrate with Youtrack to ping team channels with updates when new issues are created in the Production Engineering board </li>
          <li>After migrating from YouTrack to Github, implemented a custom Slackbot integrated with GitHub to ping team channels with updates when new issues are created in the Production Engineering project</li>
          <li>Implemented various cleaner jobs in Golang to remove stale data from the system</li>
-         <li>Lead Customer Support Engineering (CSE) daily stand-up calls </li>
+         <li>Lead Customer Support Engineering (CSE) daily stand-up calls</li>
          <li>Implemented a Round-Robin tool that automatically assigned support requests to freed up team members</li>
        </ul>
      </div>
